# Nounous_en_force

./: README.md
backend/: .gitignore  Cargo.toml  backup.sql  diesel.toml
backend/migrations/2025-02-21-094436_create_users/: up.sql
backend/migrations/2025-02-24-124731_add_users_role/: down.sql  up.sql
backend/migrations/2025-02-26-144242_add_profile_permission_to_users/: down.sql  up.sql
backend/migrations/2025-03-04-104020_create_users/: up.sql
backend/migrations/2025-03-05-110328_change_is_validated_boolean_type/: down.sql  up.sql
backend/migrations/2025-03-20-124947_add_rejection_reason_in_users/: down.sql  up.sql
backend/migrations/2025-03-20-125941_add_creche_temp_tables/: down.sql  up.sql
backend/migrations/2025-03-24-105945_delete_email_from_temps/: down.sql  up.sql
backend/migrations/2025-04-10-133746_init_full_schema/: down.sql  up.sql
backend/migrations/2025-04-11-142245_fix_user_id_default/: down.sql  up.sql
backend/migrations/2025-04-16-085714_fix_temp_id_default/: down.sql  up.sql
backend/migrations/2025-04-17-081258_fix_nurseries_id_default/: down.sql  up.sql
backend/src/: db.rs  main.rs  schema.rs
backend/src/mods/models/: apierror.rs  creches.rs  forms.rs  mod.rs  nurseries.rs  temps.rs  user.rs
backend/src/mods/routes/: admin.rs  login.rs  mod.rs  profile.rs  register.rs  verifyemail.rs
backend/src/mods/routes/register/: mod.rs  register_owner.rs  register_temp.rs  register_user.rs
backend/src/mods/utils/: email.rs  middleware.rs  mod.rs  schema.rs  security.rs  send_email.rs
backend/src/utils/: auth.rs  schema.rs
frontend/: README.md  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  root-layout.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/components/: Register.tsx  button.tsx
frontend/src/app/hooks/: useAuth.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/register/[role]/: page.tsx
frontend/src/app/register/complete/: page.tsx
frontend/src/app/register/complete/creche/: page.tsx
frontend/src/app/register/complete/intervenant/: page.tsx
frontend/src/app/styles/: register.css
frontend/src/app/types/: user.ts
frontend/src/app/verify_email/: page.tsx
frontend/src/components/form/: StepControls.tsx  StepProgressBar.tsx
frontend/src/components/ui/: Accordion.tsx
