[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
# Framework web
actix-web = "4.9.0"
# Hashage des mots de passe
bcrypt = "0.17.0"
# ORM (Mapping Object-Relationnel) pour PostgreSQL
diesel = { version = "2.2.7", features = ["postgres"] }
diesel_migrations = "2.2.0"
# Gestion des variables d'environnement
dotenv = "0.15.0"
# Gestion des JWT
jsonwebtoken = "9.3.1"
# Serialisation des données
serde = "1.0.217"
serde_json = "1.0.138"
# Async runtime
tokio = "1.43.0"
