[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#Permet connexions entre NextJS et Rust
actix-cors = "0.7.0"
actix-rt = "2.10.0"
# Framework web
actix-web = "4.9.0"
# Hashage des mots de passe
bcrypt = "0.17.0"
#Typage DateTime
chrono = { version = "0.4.39", features = ["serde"] }
# ORM (Mapping Object-Relationnel) pour PostgreSQL
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"
# Gestion des variables d'environnement
dotenv = "0.15.0"
# Gestion des JWT
jsonwebtoken = "9.3.1"
# Serialisation des données
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
# Async runtime
tokio = { version = "1.43.0", features = ["full"] }
